--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@react-three/fiber": "^9.0.0",
-    "@react-three/drei": "^9.0.0",
-    "three": "^0.159.0",
-    "tailwindcss": "^3.3.0",
-    "framer-motion": "^11.0.0"
-  },
+  "next": "14.0.0",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@react-three/fiber": "8.15.14",
+  "@react-three/drei": "9.79.1",
+  "three": "0.158.0",
+  "tailwindcss": "^3.3.0",
+  "framer-motion": "^11.0.0"
+},
   "devDependencies": {
     "typescript": "^5.2.0",
     "postcss": "^8.4.0",
